@@ -57,6 +57,29 @@ Settings use edit handlers much like the rest of Wagtail.  Add a ``panels`` sett
             PageChooserPanel('sign_up_page'),
         ]
 
+You can also customize the editor handlers :ref:`like you would do for Page model <customising_the_tabbed_interface>`
+with a custom ``edit_handler`` attribute:
+
+.. code-block:: python
+
+    from wagtail.wagtailadmin.edit_handlers import TabbedInterface, ObjectList
+
+    @register_setting
+    class MySettings(BaseSettings):
+        # ...
+        first_tab_panels = [
+            FieldPanel('field_1'),
+        ]
+        second_tab_panels = [
+            FieldPanel('field_2'),
+        ]
+
+        edit_handler = TabbedInterface([
+            ObjectList(first_tab_panels, heading='First tab'),
+            ObjectList(second_tab_panels, heading='Second tab'),
+        ])
+
+
 Appearance
 ----------
 
